# ldr_wgpu

./: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
ldr_viewer/: Cargo.toml
ldr_viewer/src/: main.rs
ldr_wgpu/: Cargo.toml  build.rs
ldr_wgpu/src/: lib.rs  main.rs  normal.rs  pipeline.rs  renderer.rs  scene.rs  shader.rs  shader.wgsl  texture.rs
ldr_wgpu/src/shader/: blit.wgsl  culling.wgsl  depth_pyramid.wgsl  scan.wgsl  shader.wgsl  visibility.wgsl
ldr_wgpu_batch/: Cargo.toml
ldr_wgpu_batch/src/: main.rs
src/: blit_depth.rs  culling.rs  culling.wgsl  depth_pyramid.rs  depth_pyramid.wgsl  edge_split.rs  geometry.rs  main.rs  normal.rs  pipeline.rs  scene.rs  shader.rs  shader.wgsl  texture.rs
src/shader/: blit_depth.rs  blit_depth.wgsl  culling.rs  culling.wgsl  depth_pyramid.rs  depth_pyramid.wgsl  model.rs  model.wgsl  scan.rs  scan.wgsl  scan_add.rs  scan_add.wgsl  visibility.rs  visibility.wgsl
