[package]
name = "ldr_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
wgpu = "0.16.0"
winit = "0.28.3"
ldr_tools = { git = "https://github.com/ScanMountGoat/ldr_tools_blender", rev = "d8d9a43" }
bytemuck = { version = "1.13", features = [ "derive" ] }
glam = { version = "0.23.0", features = ["bytemuck"] }
memoffset = "0.8.0"
futures-intrusive = "0.5.0"
rayon = "1.7.0"
simple_logger = "4.2.0"
log = "0.4.19"

[build-dependencies]
wgsl_to_wgpu = "0.4.1"