[package]
name = "ldr_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
ldr_wgpu = { path = "../ldr_wgpu" }
futures.workspace = true
wgpu.workspace = true
winit = { version = "0.29.4", features = ["rwh_05"] }
ldr_tools.workspace = true
simple_logger.workspace = true
log.workspace = true
glam.workspace = true