[package]
name = "ldr_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
wgpu = "22.1.0"
ldr_tools = { git = "https://github.com/ScanMountGoat/ldr_tools_blender", rev = "f8d9b3f" }
bytemuck = { version = "1.18", features = [ "derive" ] }
glam = { version = "0.25.0", features = ["bytemuck"] }
futures-intrusive = "0.5.0"
rayon = "1.10.0"
simple_logger = "4.2.0"
log = "0.4.19"
meshopt = "0.3.0"

[build-dependencies]
wgsl_to_wgpu = "0.10.1"
