[package]
name = "ldr_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
wgpu = "26.0.0"
ldr_tools = { git = "https://github.com/ScanMountGoat/ldr_tools_blender", rev = "e403088" }
bytemuck = { version = "1.18", features = [ "derive" ] }
glam = { version = "0.30.3", features = ["bytemuck"] }
futures-intrusive = "0.5.0"
rayon = "1.10.0"
simple_logger = "4.2.0"
log = "0.4.19"
meshopt = "0.3.0"
indexmap = "2.9.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }

[build-dependencies]
wgsl_to_wgpu = "0.15.1"
