[package]
name = "ldr_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
futures.workspace = true
wgpu.workspace = true
ldr_tools.workspace = true
bytemuck = { version = "1.18", features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
rayon = "1.10.0"
simple_logger.workspace = true
log.workspace = true
meshopt = "0.6.2"
indexmap = "2.9.0"
image = { workspace = true, default-features = false, features = ["png"] }

[build-dependencies]
wgsl_to_wgpu = "0.16.0"
