[package]
name = "ldr_wgpu_batch"
version = "0.1.0"
edition = "2024"

[dependencies]
ldr_wgpu = { path = "../ldr_wgpu" }
wgpu.workspace = true
ldr_tools.workspace = true
futures.workspace = true
futures-intrusive = "0.5.0"
simple_logger.workspace = true
log = "0.4.19"
image = { workspace = true, default-features = false, features = ["png"] }
globwalk = "0.9.1"